creating dummy list

--- a/index.html
+++ b/index.html
@@ -42,15 +42,40 @@
     <form class="stepTwo">
         <h2>Title PlaceHolder</h2>
         <h4>Category PlaceHolder</h4>
-        <textarea name="description" id="" cols="55" rows="20" placeholder="I am grateful..."></textarea>
+        <textarea name="description" id="description" cols="55" rows="20" placeholder="I am grateful..."></textarea>
         <div>
-            <button class="man-Btn" >Manifest</button>
+            <button class="manBtn" >Manifest</button>
         </div>        
     </form>
 </div>
-<div>
-    <ul>
-        <li>test</li>
+<div class="listContainer">
+    <div class="manListTitle">
+        <h2>Manifestation List</h2>
+        <div>
+            <label for="sort">Filter list</label>
+            <select name="sort" id="">
+                <option value="completed">Completed</option>
+                <option value="pending">Pending</option>
+            </select>
+        </div>
+        
+    </div>
+    <ul class="manList">
+        <!-- <li id="1">
+            <div class="manListItem">
+                <button class="expandBtn">ex</button>
+                <h3>List Title PlaceHolder</h3>
+                <div class="listButtonGroup">
+                    <button>c</button>
+                    <button>x</button> 
+                </div>
+            </div>
+            <div class="expListItem">
+                <em>category</em>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae facere adipisci unde, qui aperiam impedit molestias debitis repellat eligendi, nemo, totam provident fugit exercitationem odio illum. Quam laborum aspernatur deleniti.</p>
+            </div>
+            
+        </li> -->
     </ul>
 </div>
 
