fixed expand button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <ul class="manList">
         <!-- <li id="1">
             <div class="manListItem">
-                <button class="expandBtn">ex</button>
+                <button id="expandBtn" class="expandBtn">ex</button>
                 <h3>List Title PlaceHolder</h3>
                 <div class="listButtonGroup">
                     <button>c</button>
