sort by type set up

--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
         <h2>Manifestation List</h2>
         <div>
             <label for="sort">Filter list</label>
-            <select name="sort" id="">
-                <option value="completed">Completed</option>
-                <option value="pending">Pending</option>
+            <select name="sort" id="sortOpt">
+                <option value="all">All</option>
+                <option value="completed" >Completed</option>
+                <option value="pending" >Pending</option>
             </select>
         </div>
         
